--- a/test/fixtures/gallery.html
+++ b/test/fixtures/gallery.html
@@ -1,5 +1,52 @@
-<script id="gallerymodal-template" type="text/x-handlebars-template"><button class="modal-gallery-close"><span>Fechar</span></button><ul id="gallery-modal" class="gallery">{{#each this}}<li><figure class="offer-fig"><img src="{{this}}" alt=""><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li>{{/each}}</ul><nav class="gallery-nav"><ul id="gallery-nav-modal" class="gallery-thumbs">{{#each this}}<li class="gallery-thumb"><a><img src="{{this}}" alt="" width="90px" height="60px"></a></li>{{/each}}</ul></nav></script><script id="option-template" type="text/x-handlebars-template">{{#each this}}<div class="option"><div class="col1"><h3 class="option-title">{{title}}</h3><p class="option-texto">{{description}}</p></div><div class="col2"><p class="option-title saidas"><strong>Saídas:</strong></p>{{#each from}}<p class="option-texto">{{this}}</p>{{/each}}</div><div class="col3"><p class="numero-destaque">{{daily}} <i class="diaria"></i></p><p class="option-attr">Diárias</p><hr class="separador-attrs"><p class="numero-destaque">1 <i class="pessoa"></i></p><p class="option-attr">Pessoa</p></div><div class="col4"><p class="tipo-tarifa reembolsavel">$ Tarifa não reembolsável</p><p class="option-value">Por apenas: <strong class="value">R$ <span>{{price}}</span></strong> taxas em até 10x</p><button class="option-btn">Quero ir</button></div></div>{{/each}}</script><script id="optiontag-template" type="text/x-handlebars-template"><option value="">Escolha</option>
-{{#each this}}
-	<option {{#if selected}}selected{{/if}}>{{text}}</option>
-{{/each}}
-</script><div class="fullscreen"></div><div class="container"><header><h1 class="offer-title">Hotel The Mirage (Hotel &amp; Casino)</h1><p class="offer-subtitle bold">Las Vegas, USA</p><p class="offer-subtitle">Aéreo de várias cidades + Hotel em Vegas</p></header><section class="gallery-section"><ul id="gallery" class="gallery"><li class="photo"><figure class="offer-fig"><img src="images/photo6.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo8.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo7.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo9.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo11.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo3.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo2.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo1.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo6.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo8.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo7.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo9.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo11.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo3.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo2.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li><li class="photo"><figure class="offer-fig"><img src="images/photo1.jpg" alt="" width="940px" height="370px"><figcaption class="offer-figcap">Exterior do Hotel</figcaption></figure></li></ul><nav class="gallery-nav"><ul id="gallery-nav" style="width:1520px;" class="gallery-thumbs"><li data-index='0' class="gallery-thumb"><a><img src="images/photo6.jpg" alt="" width="90px" height="60px"></a></li><li data-index='1' class="gallery-thumb"><a><img src="images/photo8.jpg" alt="" width="90px" height="60px"></a></li><li data-index='2' class="gallery-thumb"><a><img src="images/photo7.jpg" alt="" width="90px" height="60px"></a></li><li data-index='3' class="gallery-thumb"><a><img src="images/photo9.jpg" alt="" width="90px" height="60px"></a></li><li data-index='4' class="gallery-thumb"><a><img src="images/photo11.jpg" alt="" width="90px" height="60px"></a></li><li data-index='5' class="gallery-thumb"><a><img src="images/photo3.jpg" alt="" width="90px" height="60px"></a></li><li data-index='6' class="gallery-thumb"><a><img src="images/photo2.jpg" alt="" width="90px" height="60px"></a></li><li data-index='7' class="gallery-thumb"><a><img src="images/photo1.jpg" alt="" width="90px" height="60px"></a></li><li data-index='8' class="gallery-thumb"><a><img src="images/photo6.jpg" alt="" width="90px" height="60px"></a></li><li data-index='9' class="gallery-thumb"><a><img src="images/photo8.jpg" alt="" width="90px" height="60px"></a></li><li data-index='10' class="gallery-thumb"><a><img src="images/photo7.jpg" alt="" width="90px" height="60px"></a></li><li data-index='11' class="gallery-thumb"><a><img src="images/photo9.jpg" alt="" width="90px" height="60px"></a></li><li data-index='12' class="gallery-thumb"><a><img src="images/photo11.jpg" alt="" width="90px" height="60px"></a></li><li data-index='13' class="gallery-thumb"><a><img src="images/photo3.jpg" alt="" width="90px" height="60px"></a></li><li data-index='14' class="gallery-thumb"><a><img src="images/photo2.jpg" alt="" width="90px" height="60px"></a></li><li data-index='15' class="gallery-thumb last"><a><img src="images/photo1.jpg" alt="" width="90px" height="60px"></a></li></ul></nav></section>
+<section class="gallery">
+  <div id="gallery" data-photo-index='0' class="gallery__content">
+    <button type="button" class="arrow--prev arrow"></button>
+    <button type="button" class="arrow--next arrow"></button>
+    <div class="gallery__photo">
+      <figure class="gallery__figure"><img src="public/assets/images/photo6.jpg" alt="" width="940px" height="370px">
+        <figcaption class="gallery__caption">Exterior do Hotel</figcaption>
+      </figure>
+    </div>
+  </div>
+  <nav class="gallery__nav">
+    <ul id="gallery-nav" class="gallery__thumbs">
+      <li data-photo-index='0' class="gallery__thumb  gallery__thumb--selected"><img src="public/assets/images/photo6.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='1' class="gallery__thumb"><img src="public/assets/images/photo8.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='2' class="gallery__thumb"><img src="public/assets/images/photo7.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='3' class="gallery__thumb"><img src="public/assets/images/photo9.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='4' class="gallery__thumb"><img src="public/assets/images/photo11.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='5' class="gallery__thumb"><img src="public/assets/images/photo3.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='6' class="gallery__thumb"><img src="public/assets/images/photo2.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='7' class="gallery__thumb"><img src="public/assets/images/photo1.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='8' class="gallery__thumb"><img src="public/assets/images/photo6.jpg" alt="" width="90px" height="60px">
+      </li>
+      <li data-photo-index='9' class="gallery__thumb gallery__thumb--last"><img src="public/assets/images/photo8.jpg" alt="" width="90px" height="60px">
+        <div class="gallery__extra-photos">+6</div>
+      </li>
+    </ul>
+  </nav>
+</section>
+
+<script id="gallerymodal-template" type="text/x-handlebars-template">
+  <button class="modal__close"><span>Fechar</span></button>
+  <button type="button" class="arrow--prev arrow"></button>
+  <button type="button" class="arrow--next arrow"></button>
+  <div class="modal__photo-wrapper">
+    <div style="background-image: url(public/assets/<%= offer.photos[index] %>);" class="modal__photo"></div>
+  </div>
+  <div class="modal__navigator-wrapper">
+    <ul id="gallery-modal" class="modal__navigator">
+      <% for (var i = 0; i < offer.photos.length; i++) { %>
+      <% var selectedClass = i === index ? "modal__thumb--selected" : "" %>
+      <li style="background-image: url(public/assets/<%= offer.photos[i] %>);" data-photo-index="<%= i %>" class="modal__thumb <%= selectedClass %>"></li><% } %>
+    </ul>
+  </div>
+</script>
